add additional src roots

--- a/jaxb-ri/nbproject/project.properties
+++ b/jaxb-ri/nbproject/project.properties
@@ -190,8 +190,12 @@ src.classes5.dir=tools/pretty-printer/build/classes
 src.classes6.dir=runtime-staxex/build/classes
 src.classes7.dir=runtime-fi/build/classes
 src.classes8.dir=runtime-deprecated/build/classes
+src.classes9.dir=core/build/classes
+src.classes10.dir=jxc/build/classes
 src.javadoc.dir=javadoc
 src.src.dir=apgen/src
+src.core.dir=core/src
+src.jxc.dir=jxc/src
 src.src10.dir=tools/pretty-printer/src
 src.src11.dir=tools/taglets/src
 src.src12.dir=xjc/build/src
