- removed 'souce' xjc task option - fixed 'target' xjc task option description - merged jaxb1 changes from 2.2.7_no_xjc_split branch - fixed mvs.jar & xsdlib.jar for jaxb1

--- a/jaxb-ri/build.properties
+++ b/jaxb-ri/build.properties
@@ -1,7 +1,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -59,16 +59,12 @@ jaxb.libs.rebundle=${jaxb.libs}/rebundle
 jaxb.libs.runtime=${jaxb.libs.rebundle}/runtime
 jaxb.libs.runtime2=${jaxb.libs.rebundle}/runtime2
 jaxb.libs.compiler=${jaxb.libs.rebundle}/compiler
-jaxb.libs.compiler10=${basedir}/tools/compiler10
+jaxb.libs.jaxb1=${tools.root}/jaxb1_libs
 jaxb.libs.util=${jaxb.libs}/util
 jaxb.libs.test=${jaxb-unit.root}/tools/lib/util
 jaxb.docs=${basedir}/docs
 jaxb.dist=${basedir}/dist
 jaxb.build=${basedir}/build
-
-# msv, xsdlib
-msv.bin=${jaxb.libs.redist}/msv.jar
-xsdlib.bin=${jaxb.libs.redist}/xsdlib.jar
 
 # core
 core.root=${jaxb.root}/core
