--- a/jaxb-ri/build.xml
+++ b/jaxb-ri/build.xml
@@ -520,10 +520,10 @@
 
         <echo message="building msv"/>
         <unjar src="${jaxb.libs.jaxb1}/msv-core-sources.jar" dest="${external.dir}/msv"/>
-        <copy file="${maven.repo.local}/${relaxng-datatype.mvn.path}" tofile="${external.dir}/msv/msv/relaxng-datatype.jar"/>
-        <copy file="${maven.repo.local}/${xsdlib.mvn.path}" tofile="${external.dir}/msv/msv/xsdlib.jar"/>
-        <copy file="${maven.repo.local}/${isorelax.mvn.path}" tofile="${external.dir}/msv/msv/isorelax.jar"/>
-        <copy file="${maven.repo.local}/${resolver.mvn.path}" tofile="${external.dir}/msv/msv/resolver.jar"/>
+        <copy file="${maven.repo.local}/${relaxng-datatype.mvn.path}" tofile="${external.dir}/msv/relaxng-datatype.jar"/>
+        <copy file="${maven.repo.local}/${xsdlib.mvn.path}" tofile="${external.dir}/msv/xsdlib.jar"/>
+        <copy file="${maven.repo.local}/${isorelax.mvn.path}" tofile="${external.dir}/msv/isorelax.jar"/>
+        <copy file="${maven.repo.local}/${resolver.mvn.path}" tofile="${external.dir}/msv/resolver.jar"/>
         <exec executable="ant" dir="${external.dir}/msv" failonerror="true" newenvironment="true" >
             <arg line="-Djavac.target=1.6"/>
             <arg line="-Djavac.source=1.6"/>
@@ -531,7 +531,7 @@
             <arg line="-Dcpath.fromsource=relaxng-datatype.jar:xsdlib.jar:isorelax.jar:resolver.jar"/>
             <arg line="dist"/>
         </exec>
-        <mvn.publish.local jar="${external.dir}/msv/msv/dist/msv.jar" mvngroup="com.sun.msv" mvnartid="msv" mvnversion="${msv.version}"/>
+        <mvn.publish.local jar="${external.dir}/msv/dist/msv.jar" mvngroup="com.sun.msv" mvnartid="msv" mvnversion="${msv.version}"/>
 
         <echo message="building istack-commons"/>
         <build.jar.from.srczip jar="${external.dir}/istack-commons-runtime/istack-commons-runtime.jar" srczip="tools/lib/src/istack-commons-runtime-sources.jar" unzipdir="${external.dir}" srcdir="istack-commons-runtime"/>
