integrate msv/xsdlib with correct licence headers, fix integration target as well

--- a/jaxb-ri/build.properties
+++ b/jaxb-ri/build.properties
@@ -188,11 +188,6 @@ relaxng-datatype.mvn.path=com/sun/xml/relaxngDatatype/${relaxng-datatype.version
 relaxngcc.version=20021212
 relaxngcc.mvn.path=com/sun/xml/relaxngcc/${relaxngcc.version}/relaxngcc-${relaxngcc.version}.jar
 
-#imported from svn co -r '{20050516}' https://msv.dev.java.net/svn/msv/trunk msv-20050516 + DateType.java from trunk, as the repository was corrupt and the file is missing from tag
-#xsdlib.svn.url= https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/xsdlib
-xsdlib.version=20050516
-xsdlib.mvn.path=com/sun/msv/datatype/xsd/xsdlib/${xsdlib.version}/xsdlib-${xsdlib.version}.jar
-
 #imported from cvs -d :pserver:anonymous@iso-relax.cvs.sourceforge.net:/cvsroot/iso-relax co -D 20090621 -d isorelax iso-relax
 #isorelax.svn.url= https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/isorelax
 isorelax.version=20090621
@@ -206,10 +201,13 @@ jaxb-api-osgi.mvn.path=javax/xml/bind/jaxb-api-osgi/${jaxb-api.version}/jaxb-api
 args4j.version=1.0
 args4j.mvn.path=args4j/args4j/${args4j.version}/args4j-${args4j.version}.jar
 
-#imported from svn co -r '{20050516}' https://msv.dev.java.net/svn/msv/trunk msv-20050516
-#msv.svn.url= https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/msv
-msv.version=20050516
-msv.mvn.path=com/sun/msv/msv/${msv.version}/msv-${msv.version}.jar
+#msv.java.net - both msv and xsdlib come from the same project
+msv.version=2013.2.2
+msv.mvn.path=net/java/dev/msv/msv-core/${msv.version}/msv-core-${msv.version}.jar
+msvsrc.mvn.path=net/java/dev/msv/msv-core/${msv.version}/msv-core-${msv.version}-sources.jar
+xsdlib.version=${msv.version}
+xsdlib.mvn.path=net/java/dev/msv/xsdlib/${xsdlib.version}/xsdlib-${xsdlib.version}.jar
+xsdlibsrc.mvn.path=net/java/dev/msv/xsdlib/${xsdlib.version}/xsdlib-${xsdlib.version}-sources.jar
 
 #javacc.cvs.url=:pserver:guest@cvs.dev.java.net:/cvs
 #javacc.cvs.tag=release_32
