--- a/jaxb-ri/tools/bin/schemagen.pkg.template
+++ b/jaxb-ri/tools/bin/schemagen.pkg.template
@@ -2,7 +2,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 2002-2010 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2002-2013 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -53,6 +53,6 @@ else
     JAVA=java
 fi
 
-CLASSPATH=$WEBSERVICES_LIB/jaxb-xjc.jar:$JAVA_HOME/lib/tools.jar
+CLASSPATH=$WEBSERVICES_LIB/jaxb-core.jar:$WEBSERVICES_LIB/jaxb-xjc.jar:$WEBSERVICES_LIB/jaxb-jxc.jar:$WEBSERVICES_LIB/jaxb-impl.jar:$JAVA_HOME/lib/tools.jar
 
 exec $JAVA $XJC_OPTS -cp "$CLASSPATH" com.sun.tools.jxc.SchemaGeneratorFacade "$@"
