--- a/jaxb-ri/tools/bin/xjc.pkg.template
+++ b/jaxb-ri/tools/bin/xjc.pkg.template
@@ -2,7 +2,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 2002-2010 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2002-2013 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -49,7 +49,7 @@ WEBSERVICES_LIB=`cd $bin_dir/../share/lib; pwd`
 #
 # Set CLASSPATH
 #
-CLASSPATH=${WEBSERVICES_LIB}/jaxb-api.jar:${WEBSERVICES_LIB}/jaxb-impl.jar:${WEBSERVICES_LIB}/jaxb-xjc.jar:${WEBSERVICES_LIB}/../../../../usr/share/lib/resolver.jar
+CLASSPATH=${WEBSERVICES_LIB}/jaxb-api.jar:${WEBSERVICES_LIB}/jaxb-core.jar:${WEBSERVICES_LIB}/jaxb-xjc.jar:${WEBSERVICES_LIB}/jaxb-impl.jar:${WEBSERVICES_LIB}/../../../../usr/share/lib/resolver.jar
 
 if [ -n "$JAVA_HOME" ]
 then
