--- a/jaxb-ri/tools/bin/xjc.rpm.template
+++ b/jaxb-ri/tools/bin/xjc.rpm.template
@@ -2,7 +2,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 2002-2010 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2002-2013 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -56,6 +56,6 @@ fi
 #
 # Set CLASSPATH
 #
-CLASSPATH=$JAVA_HOME/lib/tools.jar:$WEBSERVICES_LIB/jaxb-xjc.jar:$WEBSERVICES_LIB/../../lib/activation.jar:$WEBSERVICES_LIB/../../lib/jsr173_api.jar:$WEBSERVICES_LIB/../../../private/share/lib/jsr250-api.jar:$WEBSERVICES_LIB/../../lib/resolver.jar
+CLASSPATH=$JAVA_HOME/lib/tools.jar:$WEBSERVICES_LIB/jaxb-core.jar:$WEBSERVICES_LIB/jaxb-xjc.jar:$WEBSERVICES_LIB/../../lib/activation.jar:$WEBSERVICES_LIB/../../lib/jsr173_api.jar:$WEBSERVICES_LIB/../../../private/share/lib/jsr250-api.jar:$WEBSERVICES_LIB/../../lib/resolver.jar
  
 $JAVA $XJC_OPTS -cp "$CLASSPATH" com.sun.tools.xjc.Driver "$@"
